# hammer_systems_test

./: .env  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
apps/: urls.py
apps/api/: urls.py
apps/api/v1/: urls.py
apps/api/v1/users/: serializers.py  urls.py  views.py
apps/frontend/users/: forms.py  urls.py  views.py
apps/frontend/users/templates/: authorize_form.html  login_form.html  profile_form.html
apps/users/: models.py  tasks.py
config/: settings.py  urls.py
